--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,8 @@ body {
 	font-family: Raleway;
 }
 .big {
-	font-size: 3em;
-	margin-left: 1em;
+	/* font-size: 3em;
+	margin-left: 1em; */
 }
 .chart-background{
 	margin-left: -4px;
