--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+.outline{
+	border: 1px solid #ccc;
+	border-radius: 3px;
+}
+p.no-margin{
+	margin-bottom: 0;
+}
 body {
 	margin: 90px 0 0 0;
 	background-color: #ffffff;
@@ -396,6 +403,14 @@ p.credits {
 	display: none;
 	font-size: .9em;
 }
+.reload{
+	cursor: pointer;
+}
+.horizontal-spacer{
+	display: inline-block;
+	width: 1em;
+}
+
 .btn-outline-burgundy{
 	margin: 2em;
 	color: #C32E1E;
