--- a/index.html.twig
+++ b/index.html.twig
@@ -91,11 +91,11 @@
 
 	<div class="col-md-3 col-6">
 		<span class="big confirmed_total">_____</span><br>
-		<span class="label">infections confirmées cumulées</span>
+		<span class="label">cas confirmés cumulés</span>
 	</div>
 	<div class="col-md-3 col-6">
 		<span class="big existing_total">___</span><br>
-		<span class="label">infections encore existantes</span>
+		<span class="label">cas encore existants</span>
 	</div>
 	<div class="col-md-3 col-6">
 		<span class="big recovered_total">___</span><br>
@@ -194,7 +194,7 @@
 
 				<p class="text-center no-margin"><b>Date:</b> <span class="date">mercredi 19 février 2020</span> <span class="horizontal-spacer"></span><i class="fa fa-undo reload" aria-hidden="true"></i></p>
 
-				<div id="chartTop"></div>
+				<div id="animatedBarChart"></div>
 				<div>Cas cumulés (sans prise en compte des guérisons) d’infection au Covid-19, sans la Chine ni le paquebot «Diamond Princess».</div>
 				<div class="source">Source:
 					<a target="_blank" href="https://github.com/CSSEGISandData/COVID-19">Université Johns-Hopkins</a>, données retraitées par <i>Le Temps</i></div>
@@ -225,21 +225,12 @@
 
 {{ block('footer_brand') }}
 
+<!-- 14 merged, minified libraries -->
+<script src="lib-merged/libraries.js"></script>
 
-<script src="lib/jquery-3.4.1.slim.min.js"></script>
-<script src="lib/ion.rangeSlider.js"></script>
-<script src="lib/bootstrap.min.js"></script>
-
-<!-- pies -->
-<script src="lib/d3.min.js"></script>
-<script src="lib/d3-zoom.min.js"></script>
-<script src="lib/topojson.v2.min.js"></script>
-<script src="lib/d3-geo-projection.v2.min.js"></script>
-<script src="lib/d3-tip.js"></script>
-<script src="lib/queue.min.js"></script>
-<script src="js/chart-custom.js?UPDATE"></script>
-<script src="lib/c3.min.js"></script>
-
+<script>
+var controller = new ScrollMagic.Controller();
+</script>
 <script src="js/map.js?UPDATE"></script>
 <script src="js/animatedBarChart.js?UPDATE"></script>
 
