--- a/update/index.html.twig
+++ b/update/index.html.twig
@@ -12,8 +12,8 @@
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/c3.min.css"/>
 
-	<link rel="stylesheet" type="text/css" href="css/style.css?1584957067457" />
-	<link rel="stylesheet" type="text/css" href="css/map.css?1584957067457" />
+	<link rel="stylesheet" type="text/css" href="css/style.css?1584970679493" />
+	<link rel="stylesheet" type="text/css" href="css/map.css?1584970679493" />
 	<link rel="stylesheet" type="text/css" href="css/ion.rangeSlider.css" />
 	<style>
 	.c3-area {
@@ -105,6 +105,62 @@
 	</div>
 </div>
 
+
+	<!-- switzerland -->
+	<div class="row align-items-end">
+		<div class="col-12 group-label text-center">
+			<h5>Evolution en Suisse depuis le 6 mars</h5>
+		</div>
+
+		<div class="col-12">
+			<div id="time-serie-chart-ch"></div>
+		</div>
+		<div class="col-7 filter-container-ch">
+			<label>Naviguer par date</label>
+			<input type="text" id="range_sliderCH" />
+		</div>
+		<div class="col-2">
+			<button id="playpauseCH" class="button play-ch pause-ch"></button>
+		</div>
+		<div class="col-3">
+			<div class="form-check">
+		    <input type="checkbox" class="form-check-input" id="showAbsoluteCH">
+		    <label class="form-check-label" for="showAbsoluteCH"><b>Valeurs absolues</b></label>
+		  </div>
+		</div>
+	</div>
+
+	<div class="row">
+
+		<div class="col-lg-9 col-sm-12">
+			<div id="mapCH" class="map">
+			</div>
+		</div>
+
+		<div class="col-lg-3 col-sm-12">
+			<div class="map-details-CH">
+				<h4></h4>
+				<p>Survoler/toucher un cercle pour plus d’informations.</p>
+			</div>
+		</div>
+		<div class="col-lg-12">
+			<div class="source"><b>Note</b> Les données cantonales manquantes, complétées par le jour précédent, sont indiquées par des cercles oranges. L’Office fédéral de la santé publique (OFSP) fournit des rapports quotidiens en PDF, mais ne publie pas les données brutes. Les tests systématiques ont été interrompus le 15 mars. Cette infographie est mise à jour grâce aux compilations de tweets de l’OFSP et de pages d’information cantonales par l’informaticien Daniel Probst.</div>
+			<div class="source">Source: <a target="_blank" href="https://www.corona-data.ch">corona-data.ch</a>, OFSP, cantons suisses. Population dans les cantons: <a target="_blank" href="https://www.bfs.admin.ch/bfs/fr/home.assetdetail.9486063.html">OFS</a></div>
+			</div>
+		</div>
+
+
+	<div class="row padding-bottom">
+		<div class="col-lg-10 offset-md-1 col-md-12">
+			<h5>Les dix cantons suisses comptant le plus de cas par habitants</h5>
+			<p>Vaud, Genève et le Tessin sont les cantons qui comptaient le plus de cas confirmés pour 100 000 habitants le dimanche 22 mars. Ce graphique est actualisé lorsque des données complètes par canton le permettent.</p>
+				<div class="c3-chart" id="chart-swiss-cantons"></div>
+			<div class="source">Source: <a target="_blank" href="https://www.corona-data.ch">corona-data.ch</a>, OFSP, cantons suisses.</div>
+		</div>
+	</div>
+	<!-- end switzerland -->
+
+
 <!-- toolbox -->
 
 <div class="row align-items-end">
@@ -168,51 +224,7 @@
 		</div>
 	</div>
 
-	<div class="row align-items-end">
-		<div class="col-12 group-label text-center">
-			<h5>Evolution en Suisse depuis le 6 mars</h5>
-		</div>
 
-		<div class="col-12">
-			<div id="time-serie-chart-ch"></div>
-		</div>
-		<div class="col-10 filter-container-ch">
-			<label>Naviguer par date</label>
-			<input type="text" id="range_sliderCH" />
-		</div>
-		<div class="col-2">
-			<button id="playpauseCH" class="button play-ch pause-ch"></button>
-		</div>
-	</div>
-
-	<div class="row">
-
-		<div class="col-lg-9 col-sm-12">
-			<div id="mapCH" class="map">
-			</div>
-		</div>
-
-		<div class="col-lg-3 col-sm-12">
-			<div class="map-details-CH">
-				<h4></h4>
-				<p>Survoler/toucher un cercle pour plus d’informations.</p>
-			</div>
-		</div>
-		<div class="col-lg-12">
-			<div class="source"><b>Note</b> Les données cantonales manquantes, complétées par le jour précédent, sont indiquées par des cercles oranges. L’Office fédéral de la santé publique (OFSP) fournit des rapports quotidiens en PDF, mais ne publie pas les données brutes. Les tests systématiques ont été interrompus le 15 mars. Cette infographie est mise à jour grâce aux compilations de tweets de l’OFSP et de pages d’information cantonales par l’informaticien Daniel Probst.</div>
-			<div class="source">Source: <a target="_blank" href="https://www.corona-data.ch">corona-data.ch</a>, OFSP, cantons suisses. Population dans les cantons: <a target="_blank" href="https://www.bfs.admin.ch/bfs/fr/home.assetdetail.9486063.html">OFS</a></div>
-			</div>
-		</div>
-
-
-	<div class="row padding-bottom">
-		<div class="col-lg-10 offset-md-1 col-md-12">
-			<h5>Les dix cantons suisses comptant le plus de cas</h5>
-			<p>Vaud, Genève et le Tessin sont les cantons qui comptent le plus de cas confirmés. Le Tessin compte le plus haut taux par habitant (27 infections confirmées pour 10 000 habitants le samedi 21 mars). Le graphique est actualisé lorsque des données complètes par canton le permettent.</p>
-				<div class="c3-chart" id="chart-swiss-cantons"></div>
-			<div class="source">Source: <a target="_blank" href="https://www.corona-data.ch">corona-data.ch</a>, OFSP, cantons suisses.</div>
-		</div>
-	</div>
 
 	<div class="row padding-bottom">
 		<!-- <div class="outline"> -->
@@ -269,9 +281,9 @@
 <script>
 var controller = new ScrollMagic.Controller();
 </script>
-<script src="js/map.js?1584957067457"></script>
-<script src="js/mapCH.js?1584957067457"></script>
-<script src="js/animatedBarChart.js?1584957067457"></script>
+<script src="js/map.js?1584970679493"></script>
+<script src="js/mapCH.js?1584970679493"></script>
+<script src="js/animatedBarChart.js?1584970679493"></script>
 
 <script>
 
@@ -318,9 +330,9 @@ var chartCH = c3.generate({
 	bindto: "#chart-swiss-cantons",
 
 	data: {
-		url: 'data/c3-cantons-switzerland.csv?1584957067457',
+		url: 'data/c3-cantons-switzerland.csv?1584970679493',
 		type: 'line',
-		x: 'Date',
+		x: 'timestamp',
 		colors: {
 
 		}
@@ -335,7 +347,7 @@ var chartCH = c3.generate({
 		},
 		y: {
 				tick: {
-					values: [0, 500, 1000, 1500, 2000],
+					values: [0, 100, 200, 300, 400],
 				}
 			}
 		},
@@ -343,10 +355,10 @@ var chartCH = c3.generate({
 			y: {
 				lines: [
 					{ value: 0},
-					{ value: 500},
-					{ value: 1000},
-					{ value: 1500},
+					{ value: 100},
 					{ value: 2000},
+					{ value: 300},
+					{ value: 400},
 				]
 			}
 		}
@@ -363,7 +375,7 @@ var chart = c3.generate({
 	bindto: "#chart-recoveries",
 
 	data: {
-		url: 'data/c3-cas-guerisons.csv?1584957067457',
+		url: 'data/c3-cas-guerisons.csv?1584970679493',
 		type: 'line',
 		x: 'timestamp',
 		colors: {
@@ -404,7 +416,7 @@ var chartCases = c3.generate({
 	bindto: "#chart-china-other",
 
 	data: {
-		url: 'data/top5_existing.csv?1584957067457',
+		url: 'data/top5_existing.csv?1584970679493',
 		type: 'line',
 		x: 'date',
 		labels: {
@@ -450,7 +462,7 @@ height: 200
 bindto: "#chart-switzerland-evolution",
 
 data: {
-url: 'data/c3-switzerland-evolution?1584957067457',
+url: 'data/c3-switzerland-evolution?1584970679493',
 type: 'area',
 x: 'timestamp',
 colors: {
